feat(user): 代码优化，去除trim方法封装，没有必要